--- a/public/example/views/example.client.view.html
+++ b/public/example/views/example.client.view.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#!/">MEAN TODO</a>
+                <a class="navbar-brand" href="#!/">SuperCap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,8 +21,8 @@
                     <li class="page-scroll" data-ng-show="!authentication.user">
                         <a href="/register">Register</a>
                     </li>
-                 
-                
+
+
                     <li class="page-scroll" data-ng-show="!authentication.user">
                         <a href="/logout">Hello <span data-ng-bind="authentication.user.name" data-ng-show="authentication.user"></span>, Logout?</a>
                     </li>                    
@@ -32,18 +32,43 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3
+                 " id="leftCol">
 
-    <section class="success" id="about" data-ng-show="!authentication.user">
-        <div class="container">
-	    	<ul>
-				<h1>
-					<li><a href="/#!/todos">List Todos</a></li>
-				</h1>
-				
-				<h1>
-					<li><a href="/#!/todos/create">Create Todo</a></li>
-				</h1>
-			</ul>        
+                <div class="well"> 
+                    <ul class="nav nav-stacked" id="sidebar">
+                        <li><a href="/#!/todos">List Todos</a></li>
+                        <li><a href="/#!/todos/create">Create Todo</a></li>
+                        <li><form><input type="text" name="casnumber" placeholder="CAS number"></form></li>
+                        <li>
+                            <br>
+                            <select>
+                                <option value="a1">Anion1</option>
+                                <option value="a2">Anion2</option>
+                                <option value="a3">Anion3</option>
+                                <option value="a4">Anion4</option>
+                            </select>
+                        </li>
+                        
+                        <li>
+                            <br>
+                            <select>
+                                <option value="c1">Cation1</option>
+                                <option value="c2">Cation2</option>
+                                <option value="c3">Cation3</option>
+                                <option value="c4">Cation4</option>
+                            </select>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>  
+            <div class="col-md-9">
+                <br>
+                Drawing area for graphs.        	
+            </div> 
         </div>
-    </section>
+    </div>
 </div>
