--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:ng="http://angularjs.org">
 <head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Nikola Brežnjak">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/mean.css" rel="stylesheet">
 
     <title>MEAN TODO</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/mean.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
 <body ng-app="mean">
 	<nav class="navbar navbar-default navbar-fixed-top">
