--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,33 +1,160 @@
-.custom-valign25 {
-    height: 25%;
+.light-grey-background {
+    background-color:#eeeeee;
+}
+
+.lighter-grey-background {
+    background-color:#fcfcfc;
+}
+
+
+.white-background {
+    background-color:#ffffff;
+}
+
+.input-container {
+    min-height: 220px;
+}
+
+.input-panel {
+    background-color: #555;
+    color: #EEE;
+    margin: 8px 0px;
+    min-height: 40px;
+    padding: 4px;
+}
+
+.input-panel:hover {
+    background-color: #666;
+    color: #fff;
+}
+
+.input-panel-active {
+    background-color: #777;
+    color: #FFF;
     
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    margin: auto;
 }
 
-.custom-valign50 {
-    height: 50%;
+.bottom {
+    position:absolute;
+    bottom:8px;
+}
+
+hr {
+    color: #888888;
+    height: 1px !important;
+    width: 100%;
+    background-color: black;
+}
+
+/*!
+ * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+/* Toggle Styles */
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    padding: 8px;
+    overflow-y: auto;
+    background: #444;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 0px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+ .sidebar-title {
+    text-indent: 20px;
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+    color: #fff;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #FFFFFF;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
     
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    #wrapper.toggled {
+        padding-left: 0;
+    }
 
-    margin: auto;
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
 }
-
-.left-panel {
-    height: 100%;   
-}
-
-.right-panel {
-    height: 100%;   
-}
-
-
