--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -68,9 +68,10 @@
             </div>
 
             <!-- 3D MODEL -->
-            <div class="col-xs-12 col-md-6">
-                3D model will be here
+            <div class="col-xs-12 col-md-6" id="glmol">      
+                <textarea id="glmol_src"></textarea>
             </div>
+            
 
             <div class="clearfix" />
 
