--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -68,7 +68,7 @@
             </div>
 
             <!-- 3D MODEL -->
-            <div class="col-xs-12 col-md-6" id="glmol">      
+            <div class="col-xs-12 col-md-6" id="glmol">  
                 <textarea id="glmol_src"></textarea>
             </div>
             
@@ -77,7 +77,7 @@
 
             <!-- GRAPH CANVAS --> 
             <div id="canvasParent">
-                <canvas id="chart" class="white-background" width="100%" height="500"></canvas>
+                <canvas id="chart" class="white-background" width="100%" height="300px"></canvas>
             </div>
         </div>
     </div>
