--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,9 +39,15 @@
     bottom:8px;
 }
 
+#glmolParent {
+    width: 200px;
+    height: 150px;
+    background-color: #eeeeee;
+}
+
 #glmol {
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     background-color: #eeeeee;
 }
 
