#58 - JQuery functionality on "Add" and "X" - adding and removing combinations respectively.

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -4,23 +4,9 @@
         <div class="sidebar-title">
             Inputs
         </div>
-        <div class="input-panel">
-            Si - Hg - BMIm
-            <span class="glyphicon glyphicon-remove pull-right" aria-hidden="true"></span>
+        <div id="input-panels">
         </div>
-        <div class="input-panel input-panel-active">
-            Li - Ag - BMIm
-            <span class="glyphicon glyphicon-remove pull-right" aria-hidden="true"></span>
-        </div>
-        <div class="input-panel">
-            Li - Hg - BMIm
-            <span class="glyphicon glyphicon-remove pull-right" aria-hidden="true"></span>
-        </div>
-        <div class="input-panel">
-            Li4Ti5O12 - Bi - BMIm
-            <span class="glyphicon glyphicon-remove pull-right" aria-hidden="true"></span>
-        </div>
-        <button type="button" class="btn pull-right">Add another</button>
+        <button id="add-input-set" type="button" class="btn pull-right">Add another</button>
         <div class="clearifx" />
         <div class="bottom">
             <div class="row">
@@ -70,10 +56,10 @@
             <!-- 3D MODEL -->
             <div class="col-xs-12 col-md-6" id="glmolParent"> 
                 <div id="glmol">  
-                  <textarea id="glmol_src"></textarea>
+                    <textarea id="glmol_src"></textarea>
                 </div>
             </div>
-            
+
 
             <div class="clearfix" />
 
