--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -61,11 +61,39 @@
             </div>
 
 
-            <div class="clearfix" />
+            <div class="clearfix"></div>
 
             <!-- GRAPH CANVAS --> 
             <div id="canvasParent">
                 <canvas id="chart" class="white-background" width="100%" height="300px"></canvas>
+            </div>
+            
+            <div class="row" id="slidersContainer">
+                <div class="col-md-1">
+                    <p>E</p>
+                    <p>a<sub>0,anion</sub></p>
+                    <p>a<sub>0,cation</sub></p>
+                    <p>&gamma;<sub>anion</sub></p>
+                    <p>&gamma;<sub>cation</sub></p>
+                </div>
+                
+                <div class="col-md-10">
+                <input type="range" class="slider" id="epsilonSlider" min="0" max="4" step="0.25">
+                <input type="range" class="slider" id="a0AnionSlider" min="0.5" max="1" step="0.05">
+                <input type="range" class="slider" id="a0CationSlider" min="0.5" max="1" step="0.05">
+                <input type="range" class="slider" id="gammaAnionSlider" min="0" max="10" step="1">
+                <input type="range" class="slider" id="gammaCationSlider" min="0" max="10" step="1">
+                </div>
+                
+                <div class="col-md-1"> 
+                    <p id="epsilonValue">2</p>
+                    <p id="a0AnionValue">0.75</p>
+                    <p id="a0CationValue">0.75</p>
+                    <p id="gammaAnionValue">5</p>
+                    <p id="gammaCationValue">5</p>
+                </div>
+            </div>
+
             </div>
         </div>
     </div>
