--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -23,10 +23,6 @@
 
     <!-- MAIN PAGE -->
     <div id="page-content-wrapper" class="lighter-grey-background">
-        <div ng-repeat="anion in anions">
-            <strong>{{anion.name}}</strong> ({{anion.value}})
-        </div>
-        --------
         <div class="container">
 
             <!-- INPUT PARAMETERS -->
@@ -34,13 +30,13 @@
                 <br>
                 <div class="row">
                     <div class="col-xs-6">
-                        <select class="form-control" ng-model="selectedAnion" ng-options="anion.value as anion.name for anion in anions" ng-change="inputChanged()">
+                        <select class="form-control" ng-model="selectedAnion" ng-options="anion.label for anion in anions" ng-change="inputChanged()">
                             <option value="">Select anion</option>
                         </select>
                     </div>
 
                     <div class="col-xs-6">
-                        <select class="form-control" data-width="100%" ng-model="selectedCation" ng-options="cation.value as cation.name for cation in cations" ng-change="inputChanged()">
+                        <select class="form-control" data-width="100%" ng-model="selectedCation" ng-options="cation.label for cation in cations" ng-change="inputChanged()">
                             <option value="">Select cation</option>
                         </select>
                     </div>
@@ -48,7 +44,7 @@
                 <h4>or</h4>
                 <input id="cas" type="text" class="form-control" placeholder="Enter a CAS number">
                 <hr>
-                <select class="form-control"  data-width="100%" ng-model="selectedElectrolyte" ng-options="electrolyte.value as electrolyte.name for electrolyte in electrolytes" ng-change="inputChanged()">
+                <select class="form-control"  data-width="100%" ng-model="selectedElectrolyte" ng-options="electrolyte.label for electrolyte in electrolytes" ng-change="inputChanged()">
                     <option value="" disabled>Select electrolyte</option>
                 </select>
             </div>
