#36 - improved scaling of parameter sliders

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,8 +55,6 @@
     display: none;
 }
 
-
-
 hr {
     color: #888888;
     height: 1px !important;
@@ -91,7 +89,7 @@ hr {
     width: 0;
     height: 100%;
     margin-left: -250px;
-    padding: 8px;
+    padding: 0px;
     overflow-y: auto;
     background: #444;
     -webkit-transition: all 0.5s ease;
@@ -102,6 +100,7 @@ hr {
 
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
+    padding: 8px;
 }
 
 #page-content-wrapper {
@@ -110,11 +109,16 @@ hr {
     padding: 0px;
 }
 
+#container1 {
+    width: 100%;
+}
 
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
     margin-right: -250px;
 }
+
+
 
 /* Sidebar Styles */
 
@@ -150,6 +154,8 @@ hr {
     background: none;
 }
 
+
+
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
@@ -160,11 +166,11 @@ hr {
     }
     
     #canvasParent {
-        width: calc(100% - 250px);
-    }
+        width: 80%;
+    }  
     
     #slidersContainer {
-        width: calc(100% - 250px);      
+        width: 80%;
     }
 
     #sidebar-wrapper {
