--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -23,7 +23,7 @@
 
     <!-- MAIN PAGE -->
     <div id="page-content-wrapper" class="lighter-grey-background">
-        <div class="container">
+        <div class="container1">
 
             <!-- INPUT PARAMETERS -->
             <div class="col-xs-12 col-md-6 light-grey-background input-container" id="inputContainer">
@@ -57,7 +57,7 @@
             </div>
 
 
-            <div class="clearfix"></div>
+            
 
             <!-- GRAPH CANVAS --> 
             <div id="canvasParent">
@@ -65,7 +65,7 @@
             </div>
             
             <div class="row" id="slidersContainer">
-                <div class="col-md-1">
+                <div class="col-xs-1">
                     <p>E</p>
                     <p>a<sub>0,anion</sub></p>
                     <p>a<sub>0,cation</sub></p>
@@ -73,7 +73,7 @@
                     <p>&gamma;<sub>cation</sub></p>
                 </div>
                 
-                <div class="col-md-10">
+                <div class="col-xs-9">
                 <input type="range" class="slider" id="epsilonSlider" min="0" max="4" step="0.25">
                 <input type="range" class="slider" id="a0AnionSlider" min="0.5" max="1" step="0.05">
                 <input type="range" class="slider" id="a0CationSlider" min="0.5" max="1" step="0.05">
@@ -81,7 +81,7 @@
                 <input type="range" class="slider" id="gammaCationSlider" min="0" max="10" step="1">
                 </div>
                 
-                <div class="col-md-1"> 
+                <div class="col-xs-2"> 
                     <p id="epsilonValue">2</p>
                     <p id="a0AnionValue">0.75</p>
                     <p id="a0CationValue">0.75</p>
