--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -21,7 +21,7 @@
         <div class="bottom">
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                    <button type="button" class="btn btn-info btn-lg">Print</button>
+                    <a href="javascript:if(window.print)window.print()" class="btn btn-info btn-lg ">Print</a>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <button type="button" class="btn btn-info btn-lg">Export</button>
