Print button view shows info based of sideview. Todo for future: remove info from printview if it is removed from sideview.
(https://github.com/vladislavivanistsev/SuperCap/issues/77)

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -33,6 +33,9 @@
 
     <!-- MAIN PAGE -->
     <div id="page-content-wrapper" class="lighter-grey-background">
+        <div class="panel-default visible-print-block ">
+            <div id ="printingInfo"></div>
+        </div>
         <div class="container1">
 
             <!-- INPUT PARAMETERS -->
@@ -73,7 +76,6 @@
             <div id="canvasParent">
                 <canvas id="chart" class="white-background"></canvas>
             </div>
-
             <div class="row" id="slidersContainer">
                 <div class="col-xs-1 hidden-print">
                     <p>E</p>
@@ -99,7 +101,6 @@
                     <p id="gammaCationValue">5</p>
                 </div>
             </div>
-
         </div>
     </div>
     <!-- HOWTOUSETHISAPP MODAL PAGE -->
