#58, #72 - Implemented adding new input sets and switching between input sets on the sidebar.

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,6 +1,7 @@
 <div id="wrapper">
     <!-- SIDEBAR -->
     <div id="sidebar-wrapper" class="hidden-print">
+        <!-- BUTTONS -->
         <div>
             <div class="row">
                 <a 
@@ -22,12 +23,13 @@
             </div>
 
         </div>
+        <!-- INPUT SETS -->
         <div class="sidebar-title text-center ">
             Inputs
         </div>
         <div id="input-panels"></div>
         <div>
-            <button id="add-input-set" type="button" class="btn pull-right">Add another</button>
+            <button type="button" class="btn pull-right" ng-click="addNewInputSet()">Add another</button>
         </div>
     </div>
 
