#41  - Replaced chart.js with angular based n3-charts library.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,11 @@
     background-color:#ffffff;
 }
 
+#chartContainer {
+    width: 700px;
+    height: 600px;
+}
+
 .input-container {
     min-height: 220px;
 }
