--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -75,8 +75,8 @@
             </div>
 
             <!-- GRAPH CANVAS --> 
-            <div id="canvasParent">
-                <canvas id="chart" class="white-background"></canvas>
+            <div id="chartContainer">
+                <linechart data="chartData" options="chartOptions"></linechart>
             </div>
             <div class="row" id="slidersContainer">
                 <div class="col-xs-1 hidden-print">
